--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@nguniversal/express-engine": "^16.1.2",
+    "@stripe/stripe-js": "^1.54.2",
     "express": "^4.15.2",
+    "ngx-stripe": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
