--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@nguniversal/builders": "^16.1.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^14.15.0",
