--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
+    "@angular-builders/dev-server": "^7.3.1",
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
@@ -44,6 +46,7 @@
     "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.5.1",
+    "dotenv": "^16.3.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
